# eye-in-desk-client

./: .gitignore  Cargo.toml  aruco_arrange.md  build.rs  cam_cali.py  homo.py
examples/: 3d_inspector.rs  button_test.rs  cali_test.rs  dino.rs  projector_render.rs  record_and_play.rs  robot_control.rs  virtaul_obj.rs
src/: calibration.rs  config.rs  lib.rs
