[package]
name = "eye-in-desk-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
tonic = "0.9.2"
prost = "0.11.9"
nalgebra = "0.32.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1"

[dev-dependencies]
enigo = "*"

[build-dependencies]
tonic-build = "0.9.2"